finish monthly recap + memes

--- a/content/curated/digest/202012.md
+++ b/content/curated/digest/202012.md
@@ -151,6 +151,26 @@ Source(s): [[Blog/Analytics](https://blog.cloudflare.com/privacy-first-web-analy
 
 [[Reddit](https://www.reddit.com/r/nextfuckinglevel/comments/kg5yxj/this_looks_like_plastic_feels_like_plastic_but_it/)] Biodegradable plant-based plastic-like product
 
+### 22
+
+[[Reddit](https://www.reddit.com/r/animepiracy/comments/ki3zq3/a_new_contender_for_the_throne/)] (clip) a clean edit of KonoSuba for r/animepiracy
+
+### 23
+
+[[Evil Martians](https://evilmartians.com/chronicles/how-to-favicon-in-2021-six-files-that-fit-most-needs)] How to Favicon in 2021
+
+![winter 2021 calendar#d#f](https://preview.redd.it/qgei52mx4t661.png?width=640&crop=smart&auto=webp&s=5c9285d3c92abbe5e68bf86b739de0ecf77b0fe2 "[[Reddit](https://www.reddit.com/r/anime/comments/kiepeg/winter_2021_anime_release_calendar/)] Winter 2021 Anime Release Calendar")
+
+### 26
+
+![testing other people loyalty#d#f](https://i.redd.it/trt93n825h761.png "[[Reddit](https://www.reddit.com/r/facepalm/comments/kkdy9f/real_friends_would_understand_why_they_havent/)] Don't be narcissistic, real friends will understand why")
+
+### 28
+
+[[Reddit](https://www.reddit.com/r/anime/comments/klhrll/demon_slayer_the_movie_mugen_train_has_grossed/) | [Twitter](https://twitter.com/kimetsu_off/status/1343391222690238465)] Demon Slayer The Movie: Mugen Train has grossed over 32.4 billion yen, officially surpassing Spirited Away to become the highest-grossing film of all time in Japan
+
+![32cm wide door#d#f](https://external-preview.redd.it/rddv40l9FklLn1Uh_MhydXnm_NgWGHXv1MhLMtwyosw.png?auto=webp&s=344e054c486302688125e6583bcbe5bbe1c33312 "[[Reddit](https://www.reddit.com/r/interestingasfuck/comments/klbgqc/antigluttony_door_in_the_alcoba%C3%A7a_monastery/)] Anti-gluttony door")
+
 ***
 
 That's it for our recap of December 2020, folks! Stay safe and have a great January 👋
@@ -168,3 +188,21 @@ As always, let me know if you like this format or have any feedback for the mont
 ![a thank you is better than multiple sorry#d#f](https://preview.redd.it/7ra6eacfv6661.jpg?width=960&crop=smart&auto=webp&s=0d25c035bb3ac2b0f1b081fe86be2a0599ef48eb "[[Reddit](https://www.reddit.com/r/wholesomeanimemes/comments/kgdk0e/a_little_rezero_wholesomeness/)] A new perspective to what we all should be saying")
 
 ![http status ranges#d#f](https://i.redd.it/lrreaxzfde661.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/kh0z9s/http_status_ranges_in_nutshell/)] HTTP status ranges in a nutshell")
+
+![why programmers like cooking#d#f](https://i.redd.it/3afc99byjp661.png "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/ki24pd/is_it_too_late_to_become_a_chef/)] Is it too late to become a chef?")
+
+![marriage registration delivery#d#f](https://preview.redd.it/g96eikg7uo661.jpg?width=640&crop=smart&auto=webp&s=6d11bf2d6a615533f4948f5769dd5c70330406a2 "[[Reddit](https://www.reddit.com/r/wholesomeanimemes/comments/ki0dm6/smooth_delivery/)] Express unexpected delivery")
+
+![pair programming is useless but meeting isn't#d#f](https://preview.redd.it/l5ki2p5iss561.png?width=960&crop=smart&auto=webp&s=3db412254fb8d11b2966bbe2931649a8bec354e2 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/kf45ua/pair_programming/)] Pair programming you say?")
+
+![programming is like building a car#d#f](https://i.redd.it/7s6durwzgu661.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/kijo6t/question_was_do_you_use_stackoverflow_on_day_to/)] Do you use StackOverflow on day to day basis while developing software?")
+
+![machine learning is advanced math#d#f](https://i.redd.it/99wwxfir0w661.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/kioi1e/thats_me_for_sure/)] Still interested in machine learning?")
+
+![algorithm vs variable names#d#f](https://preview.redd.it/f67cs2l6ia761.jpg?width=640&crop=smart&auto=webp&s=a45f709a07b6847aa5e1187656cf0f7c05c2e789 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/kjvif3/the_complex_decisions/)] What people think programmers argue about")
+
+![trash can be recycled#d#f](https://i.redd.it/m25mp9rrxi761.jpg "[[Reddit](https://www.reddit.com/r/rareinsults/comments/kkhscj/mediocre_roast_from_my_friend/)] A rare insult on the wild")
+
+![working all day and night#d#f](https://preview.redd.it/zi79wcxaox761.png?width=960&crop=smart&auto=webp&s=e36a8b5272e2f9204cd5944edeab3fd4dc22dcf7 "[[Reddit](https://www.reddit.com/r/funny/comments/klqyy4/no_good_work_goes_unpunished/)] No good work goes unpunished")
+
+![night is better than day#d#f](https://i.redd.it/zt8x61eo07861.png "[[Reddit](https://www.reddit.com/r/memes/comments/kmn94n/it_do_be_like_that/)] The truth about night owls")
