add google outage into highlights

--- a/content/curated/digest/202012.md
+++ b/content/curated/digest/202012.md
@@ -115,6 +115,16 @@ After releasing their privacy-first Web Analytics to the world early this month 
 
 Source(s): [[Blog/Analytics](https://blog.cloudflare.com/privacy-first-web-analytics/) | [Blog/Pages](https://blog.cloudflare.com/cloudflare-pages/)]
 
+### Google worldwide outage causing multiple services to go down simultaneously
+
+On 14th, Google experienced a worldwide outage that results in their whole services going down simultaneously. It mostly affects account related services so using incognito mode (not logged in) still works. All services including YouTube, GMail, Play Store, and many more are also affected. Some can't even turn their lights on (obviously a joke, don't take it seriously).
+
+I didn't notice at all until I saw all the posts and tweets. At that moment, I'm glad I've degoogled (see the third source) myself quite a bit to not be affected by this outage. This teaches the importance of a differentiated ecosystem and how it's generally not a good idea to trust everything you have to a single monolithic company.
+
+If you're brave enough and have the resources, I suggest you look into [r/selfhosted](https://www.reddit.com/r/selfhosted/) for an alternative to everything that can be self-hosted.
+
+Source(s): [[Reddit/Technology](https://www.reddit.com/r/technology/comments/kcweqy/gmail_google_and_youtube_down_services_crash_for/) - [Mirror](https://www.mirror.co.uk/tech/breaking-gmail-google-youtube-down-23164823) | [Reddit/Android](https://www.reddit.com/r/Android/comments/kcwe8c/youtubegmailplay_store_and_other_services_are/) - [TechRadar](https://www.techradar.com/news/google-suite-youtube-and-other-services-are-down) | [Reddit/Degoogle](https://www.reddit.com/r/degoogle/comments/kcwnsr/googles_worldwide_outage_teaches_us_the/) - [TechCrunch](https://techcrunch.com/2020/12/14/gmail-youtube-google-docs-and-other-services-go-down-simultaneously-in-multiple-countries/?tpcc=ECTW2020)]
+
 ***
 
 ## Detailed monthly recap
