add facebook and instagram to headlines

--- a/content/curated/digest/202012.md
+++ b/content/curated/digest/202012.md
@@ -125,6 +125,22 @@ If you're brave enough and have the resources, I suggest you look into [r/selfho
 
 Source(s): [[Reddit/Technology](https://www.reddit.com/r/technology/comments/kcweqy/gmail_google_and_youtube_down_services_crash_for/) - [Mirror](https://www.mirror.co.uk/tech/breaking-gmail-google-youtube-down-23164823) | [Reddit/Android](https://www.reddit.com/r/Android/comments/kcwe8c/youtubegmailplay_store_and_other_services_are/) - [TechRadar](https://www.techradar.com/news/google-suite-youtube-and-other-services-are-down) | [Reddit/Degoogle](https://www.reddit.com/r/degoogle/comments/kcwnsr/googles_worldwide_outage_teaches_us_the/) - [TechCrunch](https://techcrunch.com/2020/12/14/gmail-youtube-google-docs-and-other-services-go-down-simultaneously-in-multiple-countries/?tpcc=ECTW2020)]
 
+### Facebook and Instagram are cancer to our privacy and society
+
+I don't think I can explain it better than the quote I'm about to show you (see the first source for a more detailed explanation). In simple terms, if you use Instagram under the new terms you give up any and all rights or expectations you ever had to any and all forms of privacy.
+
+> Instagram updated their terms and conditions with new clauses which pretty much allow them to do whatever the fuck they want. They can check your call logs, your SMS history, they can do live analysis on your camera, they can copy your address book and much more since the terms are pretty loosely defined.
+
+In addition to those changes, Facebook ‘secretly’ tracks your iPhone location just by having it installed on your phone. I'm quite certain this also applies to Android users, but we're pretty secured since newer phones will sometimes only allow services usage ONLY WHILE opening the app.
+
+Also! another one that involves both Facebook and Instagram is a bug that exposes users' personal email addresses and birthdays. To quote from a comment made by a redditor
+
+> So apparently the users email and and birthdays were sent as a reply when they were DM'd by another fb business user... I'm sorry but how in living fuck does a bug occur in "~~direct~~ private messages" where it automatically sends a response that includes your email and birthday???
+
+Being a programmer myself and studying Computer Science, I can assure you that this "bug" is definitely NOT a bug. It would have to explicitly grab that info, enter that information into the messenger (which is in a PRIVATE MESSAGES section), and SEND that information. Bugs don't act like this, that's not something you can do by accident, EVER.
+
+Source(s): [[Reddit/OutOfTheLoop](https://www.reddit.com/r/OutOfTheLoop/comments/kgxxmu/whats_up_with_everyone_deleting_instagram_over/ggi3tv4?context=3) - [TL;DR Legal](https://tldrlegal.com/license/instagram-terms-of-use) | [Reddit/PrivacyToolsIO](https://www.reddit.com/r/privacytoolsIO/comments/khj9vh/facebook_secretly_tracks_your_iphone_locationthis/) - [Forbes](https://www.forbes.com/sites/zakdoffman/2020/12/13/facebook-tracks-apple-iphone-locations-even-ios-14-and-iphone-12-12-pro-and-pro-max) | [Reddit/Privacy](https://www.reddit.com/r/privacy/comments/kfx2de/a_facebook_bug_exposed_instagram_users_personal/) - [TheVerge](https://www.theverge.com/2020/12/18/22189494/facebook-bug-instagram-email-birthdays-messages)]
+
 ***
 
 ## Detailed monthly recap
