--- a/content/curated/digest/202101.md
+++ b/content/curated/digest/202101.md
@@ -3,7 +3,7 @@ title: Monthly Digest - January 2021
 date:published: 2021-02-01
 ---
 
-Hey folks, welcome back to our monthly digest! As always, feel free to skip ahead to your preferred content by using the quick links provided above to jump to your the section.
+Hey folks, welcome back to our monthly digest! Let's slow down things and start off the year calm, cool, and collected. As always, feel free to skip ahead to your preferred content by using the quick links provided above to jump to your the section.
 
 ## Article of the month
 
@@ -47,7 +47,7 @@ Source(s): [[Links]]
 
 ***
 
-That's it for our recap of January 2021, folks! Stay safe and have a great {NextMonth} 👋
+That's it for our recap of January 2021, folks! Stay safe and have a great February 👋
 
 As always, let me know if you like this format or have any feedback for the monthly digests in my Twitter, Keybase, or other socials down below.
 
