add music section

--- a/content/curated/digest/202101.md
+++ b/content/curated/digest/202101.md
@@ -17,15 +17,29 @@ Hey folks, welcome back to our monthly digest! Let's slow down things and start 
 
 ## Music of the month
 
-![!YouTube#hb]({youtube_id} "[[Spotify](link)] title")
+![!YouTube#hb](TsWiuqzhtis "[[Spotify](spotify:track:61wLzCC9mT2goJ88deGPx0)] Tristam - Children in the Dark")
 
-### Honorable music mentions | [Spotify]({spotify_playlist_uri}) / [YouTube]({youtube_music_playlist})
+A release from Tristam never seems to disappoint, with such beautiful vocals, melody, and lyrics, *Children in the Dark* easily takes the spot for this month's featured music. Just kidding, it wasn't that easy, but I've certainly come to like this the more I listened to it.
+
+### Honorable music mentions | [Spotify](spotify:playlist:593qWEwY7H7sRdNL8d3dV2) / [YouTube](https://www.youtube.com/playlist?list=PLtthNj7yut55t_60yCQ7L0tQZlV2tCukX)
+
+![!YouTube#d](vcGbefQBvJ4 "[[Spotify](spotify:track:465JzFiajJO59sUrDFsxdC)] YOASOBI「アンコール」(Encore)")
+
+YOASOBI is on a roll this January and it truly makes this much harder. I can't possibly give all the spots for their releases, so here's one of the best that I enjoyed. It's also bundled with THE BOOK and makes this their first exclusive album release (not a single). This preview is what hypes me up when I first listened to the trailer, and it delivers well.
+
+![!YouTube#d](G8GaQdW2wHc "[[Spotify](spotify:track:0CnpSTdL9l5vQM4YnzXtyo)] IZ*ONE (아이즈원) 'Panorama' MV")
+
+This is (from what I heard) the last release IZ*ONE will produce, they'll be disbanded (end of contract) after this. But for their final release, it was really amazing, especially the MV. They must've put a lot of time and effort for this and it really shows in the video.
+
+![!YouTube#d](YpzpvemfhtA "[[Spotify](spotify:track:4BrYTZfpZzeNAGbJ7kh2Z0)] inverness - State of Wonder (feat. Anthony Russo & KANG DANIEL)")
+
+Monstercat has a lot of artists lately and it's quite hard to keep track of all of them, but this is one of those release that sticks to your ear. An Instinct release, this brings back a lot of memories when I first discovered Future Bass.
 
 ## Video of the month
 
 ![!YouTube#hb]({youtube_id} "title")
 
-### Honorable video mentions | [YouTube]({youtube_video_playlist})
+### Honorable video mentions | [YouTube](https://www.youtube.com/playlist?list=PLtthNj7yut57WLW3GoLqbR_vTzTk72Hcb)
 
 ***
 
