add video section

--- a/content/curated/digest/202101.md
+++ b/content/curated/digest/202101.md
@@ -37,9 +37,23 @@ Monstercat has a lot of artists lately and it's quite hard to keep track of all 
 
 ## Video of the month
 
-![!YouTube#hb]({youtube_id} "title")
+![!YouTube#hb](PKtnafFtfEo "MrBeast's Youtube Rewind 2020")
+
+If you haven't subscribed to this man, where have you been and what are you doing all this time? Go subscribe to the best YouTube philanthropist out there! This is probably a must watch for all YouTube geeks (or just anyone actually).
 
 ### Honorable video mentions | [YouTube](https://www.youtube.com/playlist?list=PLtthNj7yut57WLW3GoLqbR_vTzTk72Hcb)
+
+![!YouTube#d](p8u_k2LIZyo "Fast Inverse Square Root — A Quake III Algorithm")
+
+This one's for all programmer geeks out here. One of the best well-explained video of an absurd algorithm from an old game that really makes you think about how you're going to use any of the stuff that you learn and actually use it like this.
+
+![!YouTube#d](dALZLB_W8Lc "The Japanese myth of the trickster raccoon")
+
+I've been watching Mushi-shi lately and I love every single episode of it. Whether it's a myth or others, Japanese stories are always cool and insightful. This myth is also one of them, if you knew more of these please tell me.
+
+![!YouTube#d](xbGno-3jEJs "Every shoe store be like")
+
+**LLS** finally delivers another video and most of them from this video hits too close to home. These skits are humorous and aren't harmful like most "pranks" these days. Most of their other videos are also fun to watch so definitely check them out when you don't have much to do.
 
 ***
 
