add content section

--- a/content/curated/digest/202101.md
+++ b/content/curated/digest/202101.md
@@ -11,9 +11,21 @@ Hey folks, welcome back to our monthly digest! Let's slow down things and start 
 
 ## Content of the month
 
-![alt#f#fb]({link} "caption")
+![Demon Slayer Mugen Train#f#fb](https://www.themoviedb.org/t/p/original/xoqr4dMbRJnzuhsWDF3XNHQwJ9x.jpg "[[TMDB](https://www.themoviedb.org/t/p/original/xoqr4dMbRJnzuhsWDF3XNHQwJ9x.jpg)] Demon Slayer: Infinity Train | [See Review](reviews?q=Demon+Slayer+Mugen+Train)")
+
+This is a given. You know this is coming, this was the highlight of January 2021. A great way to start the year is to definitely watch this! It's popularity is on-par with Spirited Away and Your Name. If you haven't watched the first season, I highly recommend you do so. If you have, the what are you waiting for.
+
+\*Note that you can't really see this without watching the first season of Demon Slayer since this movie is a direct continuation of the first season.
 
 ### Honorable content mentions
+
+![!YouTube-s#d](PLZRRxQcaEjA4qyEuYfAMCazlL0vQDkIj2 "[[IMDB](https://www.imdb.com/title/tt6439562/)] Mind Field: Season 1")
+
+I've finished the first season last December, and this isn't quite fair to the show because it's such an amazing series, so putting it as an honorable mention doesn't really represent the whole series. But, I've only watched the first one and haven't seen the next seasons, so I'll put it here for this month's digest.
+
+![!YouTube#d](d9ak52ZVL5k "[[MyAnimeList](https://myanimelist.net/anime/38295/Joshikausei)] Joshikausei")
+
+A short slice of life series consisting of 12 3-min episodes. With absolutely no dialogue, Joshikausei tells a story about the every day life of 3 high school girls by only using expressions and their actions. It isn't like the classics, say *Tom and Jerry* or *Pink Panther* level, but I still enjoy it nevertheless since it's not something you see often in a form of Anime. There's also a lot of fan service, if you're into that kind of stuff. Aside from that, their comedy amusing enough and the whole series is available on YouTube (dropdown video above) in one-sitting for 35 minutes, so there's not really much to lose.
 
 ## Music of the month
 
@@ -59,11 +71,11 @@ I've been watching Mushi-shi lately and I love every single episode of it. Wheth
 
 ## Headlines of the month
 
-### {Headline}
+### The Rise of GameStop and Fall of Wall Street
 
 {Summary}
 
-Source(s): [[Links]]
+Source(s): [[YouTube](https://youtu.be/ds7pFOj0-FU)]
 
 ***
 
