add start params to music highlight

--- a/content/curated/digest/202101.md
+++ b/content/curated/digest/202101.md
@@ -29,7 +29,7 @@ A short slice of life series consisting of 12 3-min episodes. With absolutely no
 
 ## Music of the month
 
-![!YouTube#hb](TsWiuqzhtis "[[Spotify](spotify:track:61wLzCC9mT2goJ88deGPx0)] Tristam - Children in the Dark")
+![!YouTube#hb](TsWiuqzhtis?start=88 "[[Spotify](spotify:track:61wLzCC9mT2goJ88deGPx0)] Tristam - Children in the Dark")
 
 A release from Tristam never seems to disappoint, with such beautiful vocals, melody, and lyrics, *Children in the Dark* easily takes the spot for this month's featured music. Just kidding, it wasn't that easy, but I've certainly come to like this the more I listened to it.
 
