--- a/content/curated/digest/202101.md
+++ b/content/curated/digest/202101.md
@@ -3,17 +3,44 @@ title: Monthly Digest - January 2021
 date:published: 2021-02-01
 ---
 
-Hey folks, welcome back to our monthly digest! Let's slow down things and start off the year calm, cool, and collected. As always, feel free to skip ahead to your preferred content by using the quick links provided above to jump to your the section.
+Hey folks, welcome back to our monthly digest! Let's slow down things and start off the year calm, cool, and collected. A lot happened even though 2021 just started, but I'll try to start the year slowly so I don't quickly exhaust myself with overambitious things.
+
+As always, feel free to skip ahead to your preferred content by using the quick links provided above to jump to your the section.
 
 ## Article of the month
 
+![WhatsApp#f#fb](https://pocketnow.com/files/2020/04/whatsapp-800x468.jpg "[[Reddit](https://www.reddit.com/r/Android/comments/kwnuh9/whatsapp_says_it_cant_see_your_shared_location/)] [WhatsApp says it can’t see your shared location; its privacy policy says otherwise](https://pocketnow.com/whatsapp-says-it-cant-see-your-shared-location-its-privacy-policy-says-otherwise) from Pocketnow")
+
+They've created an infographic saying they can't see shared location and other stuff that its privacy policy says otherwise, it feels so disingenuous and seems like they're deliberately trying to confuse us as much as possible. If they keep going on like this, people will eventually notice and avoid them like a plague.
+
+![data linked to you#d#f](https://i1.wp.com/9to5mac.com/wp-content/uploads/sites/6/2021/01/App-privacy-labels-messaging-apps.png?w=2000&quality=82&strip=all&ssl=1 "Still not sure? [Take a look at these privacy labels in messaging apps](https://9to5mac.com/2021/01/04/app-privacy-labels-messaging-apps/)")
+
+Here's another really [good and simple explanation](https://www.reddit.com/r/privacytoolsIO/comments/ktn16q/tell_me_in_simple_words_why_whatsapps_new_privacy/gin6y7h?context=3) why everyone is concerned about the new WhatsApp policy.
+
 ### Honorable article mentions
+
+- [[Kira McLean](https://kiramclean.com/blog/what-i-use-now-instead-of-google/)] What I Use Now Instead Of Google
+
+For those who rely heavily on Google, read this and take a look on all those alternatives. Unclutter and decentralize your life from Google (or any one company), try to be independent and not rely everything heavily on them. Start early and slow, you don't need to do it in one jump, as long as you progress.
+
+- [[Reddit](https://www.reddit.com/r/socialskills/comments/kqaiow/if_you_think_you_are_boring_read_this/)] If you think you are boring read this
+
+For th... no, everyone should read this. Read the post and its comments, reflect if you've ever did those things, and stop being so harsh on yourself. Quoted straight from the last sentences.
+
+> Take some time to appreciate yourself. Stop calling yourself boring. You aren't a fucking jester here to entertain people. You're an entire human being with just as much validity as anybody else. Love yourself for who you are, and help other people feel good about themselves and you will never feel lonely again.
+
+- [[xdavidhu.me](https://bugs.xdavidhu.me/google/2021/01/11/stealing-your-private-videos-one-frame-at-a-time/)] Stealing Your Private YouTube Videos, One Frame at a Time
+- [[xdavidhu.me](https://bugs.xdavidhu.me/google/2021/01/18/the-embedded-youtube-player-told-me-what-you-were-watching-and-more/)] The Embedded YouTube Player Told Me What You Were Watching
+(and more)
+- [[Medium](https://blog.usejournal.com/how-i-stole-the-data-in-millions-of-peoples-google-accounts-aa1b72dcc075)] How I stole the data in millions of people’s Google accounts
+
+A Google product related articles. Worth the read for those learning Computer Science or any developers out there. It's quite technical, but worth it once you get the idea behind it. The first 2 articles are bug hunting reports related to YouTube made by the same person, a fun read on behind the scenes when "attacking" these things.
 
 ## Content of the month
 
 ![Demon Slayer Mugen Train#f#fb](https://www.themoviedb.org/t/p/original/xoqr4dMbRJnzuhsWDF3XNHQwJ9x.jpg "[[TMDB](https://www.themoviedb.org/t/p/original/xoqr4dMbRJnzuhsWDF3XNHQwJ9x.jpg)] Demon Slayer: Infinity Train | [See Review](reviews?q=Demon+Slayer+Mugen+Train)")
 
-This is a given. You know this is coming, this was the highlight of January 2021. A great way to start the year is to definitely watch this! It's popularity is on-par with Spirited Away and Your Name. If you haven't watched the first season, I highly recommend you do so. If you have, the what are you waiting for.
+This is a given. You know it's coming. The highlight of January 2021. A great way to start the year is to definitely watch this! It's popularity is on-par with Spirited Away and Your Name. If you haven't watched the first season, I highly recommend you do so. If you have, the what are you waiting for.
 
 \*Note that you can't really see this without watching the first season of Demon Slayer since this movie is a direct continuation of the first season.
 
@@ -51,7 +78,7 @@ Monstercat has a lot of artists lately and it's quite hard to keep track of all 
 
 ![!YouTube#hb](PKtnafFtfEo "MrBeast's Youtube Rewind 2020")
 
-If you haven't subscribed to this man, where have you been and what are you doing all this time? Go subscribe to the best YouTube philanthropist out there! This is probably a must watch for all YouTube geeks (or just anyone actually).
+If you haven't subscribed to this man, where have you been and what are you doing all this time? Go subscribe to the best YouTube philanthropist out there! This is the long awaited YouTube rewind that we want and needed but never got from YouTube.
 
 ### Honorable video mentions | [YouTube](https://www.youtube.com/playlist?list=PLtthNj7yut57WLW3GoLqbR_vTzTk72Hcb)
 
@@ -65,25 +92,61 @@ I've been watching Mushi-shi lately and I love every single episode of it. Wheth
 
 ![!YouTube#d](xbGno-3jEJs "Every shoe store be like")
 
-**LLS** finally delivers another video and most of them from this video hits too close to home. These skits are humorous and aren't harmful like most "pranks" these days. Most of their other videos are also fun to watch so definitely check them out when you don't have much to do.
+They finally delivers another video and most of them from this video hits too close to home. These skits are humorous and aren't harmful like most "pranks" these days. Most of their other videos are also fun to watch so definitely check them out when you don't have much to do.
 
 ***
 
 ## Headlines of the month
 
-### The Rise of GameStop and Fall of Wall Street
+### Signal and Telegram as WhatsApp Alternatives
 
-{Summary}
+As millions of WhatsApp users noticed the ToS changes, many are looking for alternatives and here's Signal and Telegram as best ones so far. "Recommended" by Elon Musk on his Twitter, he [urges people to use Signal](https://www.businessinsider.com/whatsapp-forcing-users-to-share-personal-data-facebook-elon-musk-2021-1?r=US&IR=T). Ever since then, their downloads has been "[up and to the right](https://www.reddit.com/r/technology/comments/kt91qk/signal_private_messenger_team_here_we_support_an/gikulu6?context=3)" and they weren't kidding.
 
-Source(s): [[YouTube](https://youtu.be/ds7pFOj0-FU)]
+> Signal was downloaded globally 246,000 times the week before WhatsApp announced the change on 4 January, and 8.8 million times the week after. [BBC]
+
+This topic also correlates with the article of the month. I've, since then, prepared myself to migrate and permanently delete my WhatsApp account. Backing up the important things and exporting stuffs I cherish. I'll probably delete my account early February, until then I'll still use it just to tell my contacts. Here's also some [status stories](https://www.reddit.com/r/signal/comments/kwovyz/whatsapp_status_to_convince_your_family_friends/) to convince your friends & family to switch to Signal. There shouldn't be any huge difference, these alternatives are imo way better while still being more or less the same as in as long as you have their phone number, their contacts will automatically be available to contact from the app.
+
+Here's a useful [thread for new Signal users](https://www.reddit.com/r/privacytoolsIO/comments/kuflpg/signal_thread_for_new_users/)
+
+Source(s): [Links Above | [BBC](https://www.bbc.com/news/technology-55634139)]
+
+### [NSFL] Cannibalistic Chickens
+
+> NSFL Warning! Don't read past this if you're not comfortable with gory stuff.
+
+More of a Today I Learned (TIL) from a personal story by a certain Reddit user. It all started from this image when they recounts some of their chicken eating habits.
+
+![cannibalistic chicken#d#f](https://i.redd.it/m6x8nf4zppa61.jpg "meme about cannibalistic chicken")
+
+They've had baby chicks and there was an accident involving a truck and a baby chick one time which results to having the baby chick barely alive. The other adult chickens were trying to eat and pull its guts out, so they've stepped in hopes of ending its life in a quicker fashion. But, as they're holding it, the baby chick looks down, sees it's own guts, and starts eating them. "And thats why I don't feel bad feeding my chickens leftover chicken", and I will never look at chickens the same way again after that.
+
+Source(s): [[Reddit](https://www.reddit.com/r/TIHI/comments/kv3kqr/thanks_i_hate_cannibalistic_chickens/givz78k?context=3)]
 
 ***
 
 ## Detailed monthly recap
 
-### {Date}
+### 10
 
-[[Source](link)] Title
+[[Reddit](https://www.reddit.com/r/getdisciplined/comments/ku0nlf/advice_a_look_at_japanese_author_haruki_murakamis/)] A look at Japanese author Haruki Murakami's daily writing routine: "The repetition itself becomes the important thing; it’s a form of mesmerism. I mesmerize myself to reach a deeper state of mind."
+
+[[Reddit](https://www.reddit.com/r/ThatsInsane/comments/ktvlxh/the_li900_silica_tiles_used_on_the_space_shuttle/)] The LI-900 silica tiles used on the Space Shuttle were such poor heat conductors you could grab them with bare hands seconds after pulling them from a 2200 degree oven
+
+### 14
+
+[[Google Blog](https://blog.google/products/devices-services/fitbit-acquisition/)] Google completes Fitbit acquisition
+
+### 15
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/kxa7zi/lpt_confidence_isnt_i_believe_i_wont_fail_but/)] Confidence isn't "I believe I won't fail", but rather "Even if I do fail, I will be fine"
+
+### 16
+
+[[Reddit](https://www.reddit.com/r/Watashi_ni_Tenshi/comments/kyhn3d/rezero_starting_life_in_an_angel_world_500_pages/)] Cuteness overload, Re:Zero in Wataten's OP style
+
+### 20
+
+![winter 2021 anime achievements#d#f](https://preview.redd.it/mrbh50lskdc61.png?width=960&crop=smart&auto=webp&s=579d241ea8869f51b59e66aeccc63c89498a9ad8 "[[Reddit](https://www.reddit.com/r/anime/comments/l0wj81/noteworthy_achievements_of_winter_2021_anime/)] Noteworthy Achievements of Winter 2021 Anime")
 
 ***
 
