--- a/content/curated/digest/202101.md
+++ b/content/curated/digest/202101.md
@@ -126,6 +126,10 @@ Source(s): [[Reddit](https://www.reddit.com/r/TIHI/comments/kv3kqr/thanks_i_hate
 
 ## Detailed monthly recap
 
+### 07
+
+[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/ksat1e/engineer_vs_designer/)] (meme) Engineer vs. Designer
+
 ### 10
 
 [[Reddit](https://www.reddit.com/r/getdisciplined/comments/ku0nlf/advice_a_look_at_japanese_author_haruki_murakamis/)] A look at Japanese author Haruki Murakami's daily writing routine: "The repetition itself becomes the important thing; it’s a form of mesmerism. I mesmerize myself to reach a deeper state of mind."
@@ -146,7 +150,23 @@ Source(s): [[Reddit](https://www.reddit.com/r/TIHI/comments/kv3kqr/thanks_i_hate
 
 ### 20
 
+[[Reddit](https://www.reddit.com/r/Minecraft/comments/l0oqnn/i_spent_over_120_hours_synchronizing_a_c418_remix/)] Synchronized Minecraft blocks with C418 remix
+
 ![winter 2021 anime achievements#d#f](https://preview.redd.it/mrbh50lskdc61.png?width=960&crop=smart&auto=webp&s=579d241ea8869f51b59e66aeccc63c89498a9ad8 "[[Reddit](https://www.reddit.com/r/anime/comments/l0wj81/noteworthy_achievements_of_winter_2021_anime/)] Noteworthy Achievements of Winter 2021 Anime")
+
+### 25
+
+[[Reddit](https://www.reddit.com/r/anime/comments/l4i7ba/what_makes_a_person_an_adult_jujutsu_kaisen/)] What makes a person an adult?
+
+### 27
+
+[[Reddit](https://www.reddit.com/r/AbruptChaos/comments/l5lo18/trauma/)] (meme) alarm trauma
+
+### 30
+
+[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/l8a33h/i_am_a_programmer_now/)] (meme) aneurysm for lead devs
+
+![how time is valued#d#f](https://preview.redd.it/i6ng3wtiace61.jpg?width=640&crop=smart&auto=webp&s=36f66ba13d680631479ec0ecbc77126a6ecdac5f "[[Reddit](https://www.reddit.com/r/ChoosingBeggars/comments/l84tg3/for_the_choosing_beggars_in_your_lives/)] For the choosing beggars in your lives")
 
 ***
 
@@ -155,3 +175,21 @@ That's it for our recap of January 2021, folks! Stay safe and have a great Febru
 As always, let me know if you like this format or have any feedback for the monthly digests in my Twitter, Keybase, or other socials down below.
 
 ## Bonus - Monthly memes
+
+![why is the bible written so weirdly#d#f](https://preview.redd.it/p1cypwqsw8c61.png?width=640&crop=smart&auto=webp&s=8720089c15d394b70beee1e0ef5cca6a7021bc43 "[[Reddit](https://www.reddit.com/r/Animemes/comments/l0fb1j/daily_erwin_meme_1083/)] \"Have you ever wondered\", you asked yourself, son of your mother")
+
+![quantum physicist and neurosurgeons vs regex experts#d#f](https://i.redd.it/vsnshba0hhc61.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/l18hk2/they_sign_a_pact_with_the_devil/)] How do they do it?")
+
+![you're always preparing#d#f](https://i.redd.it/kuv15y9htwc61.png "[[Reddit](https://www.reddit.com/r/iiiiiiitttttttttttt/comments/l2r3o0/were_gonna_have_to_go_right_to_ludicrous_speed/)] What are they preparing anyways")
+
+![anime villains and transformations#d#f](https://i.redd.it/g3z2sys2uhd61.jpg "[[Reddit](https://www.reddit.com/r/Animemes/comments/l4pk3o/its_not_mine/)] A realistic take from Attack on Titan")
+
+![monke haircut#d#f](https://i.redd.it/g4ao9726bec61.jpg "[[Reddit](https://www.reddit.com/r/blursedimages/comments/l0z8cm/blursed_monke/)] Blursed monke")
+
+![this website doesn't use cookies#d#f](https://external-preview.redd.it/Ii1zae7tWgUklTi6eSE_7YHoENA4ngh5abWIEUrA_jU.png?width=960&crop=smart&auto=webp&s=fbae38332c9792e24c3a9b90e605ec1fcf9bcfd2 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/l5gg3t/this_website_doesnt_use_cookies/)] This website doesn't use cookies")
+
+![12 months baby velocity#d#f](https://preview.redd.it/vv059y7kjsd61.jpg?width=640&crop=smart&auto=webp&s=92d228de92b026c03561ad6206e26b25ac541463 "[[Reddit](https://www.reddit.com/r/HolUp/comments/l5ut8x/anything_after_12_months_is_cringe/)] 32 months baby?")
+
+![gaming keyboard in subreddit pov#d#f](https://preview.redd.it/yfmx2ofwgsd61.png?width=960&crop=smart&auto=webp&s=7cf632eb5db33927e8544f6ea8a4b71575cb48ea "[[Reddit](https://www.reddit.com/r/MechanicalKeyboards/comments/l5ul5q/ignorance_is_bliss/)] Ignorance is bliss")
+
+![user vs interface#d#f](https://preview.redd.it/8mo5ygh8g4e61.jpg?width=640&crop=smart&auto=webp&s=d795bdcb8155bf0910821e713cf38a2cca3358ca "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/l75iun/about_right/)] Always assume the worst")
