add some more headlines

--- a/content/curated/digest/202101.md
+++ b/content/curated/digest/202101.md
@@ -110,6 +110,26 @@ Here's a useful [thread for new Signal users](https://www.reddit.com/r/privacyto
 
 Source(s): [Links Above | [BBC](https://www.bbc.com/news/technology-55634139)]
 
+### New Visa From the UK to HK Residents
+
+The UK will introduce a new visa at the end of January that will give 5.4 million Hong Kong residents the right to come and live in the UK, which is a staggering 70% of the territory's population, in case you're wondering.
+
+This is for **British** Overseas Nationals, which is still a significant portion of Hong Kongers that have a type of British nationality. Them and their families, spouse and kids, will be allowed to come and live in the UK.
+
+The article predicted that only an estimated of 300k people would actually take the offer, while the majority would still be in HK. This is both good and bad news however you see it. What would happen to HK if everyone (majority) leaves the country, but also what would happen to them if they don't leave and stayed in HK.
+
+Source(s): [[Reddit](https://www.reddit.com/r/worldnews/comments/l0gyd0/the_uk_will_introduce_a_new_visa_at_the_end_of/) | [BBC](https://www.bbc.com/news/world-asia-china-55357495)]
+
+### MDN Web Docs, The Online Bible, is in Danger
+
+MDN is (was) in danger lately, and the online community has join in to help prevent it from a total shutdown. Both Microsoft and Google Open Source has pitched in $250k each and claimed the top 2 financial contributors as an organization.
+
+MDN has done a really great job on standardizing and documenting the web resources, as well as keeping it up to date, essentially being the single source of truth, hence nicknamed the online bible. It would be terrible for everyone if it disappeared, and both Microsoft and Google seems to acknowledge that as well. From all the standard compliant APIs and many non-standard that doesn't even belong to Firefox, MDN basically has it all.
+
+While this is great and all, Mozilla [laid off 250 people (including some working on MDN)](https://blog.mozilla.org/blog/2020/08/11/changing-world-changing-mozilla/) while still giving raise to the CEOs, and then "asking" developers to maintain MDN for free by being open source. Making it open source is probably the right call and I don't dislike it since everyone can then contribute and will be more maintainable by crowdsourcing. I'm not against Mozilla or their CEOs, but the choices and strategies they've been making lately are questionable at the very least.
+
+Source(s): [[TheRegister](https://www.theregister.com/2021/01/26/mozilla_web_docs/) | [OpenCollective](https://opencollective.com/open-web-docs/) | [Reddit](https://www.reddit.com/r/javascript/comments/l5g7xe/google_microsoft_pitch_in_some_spare_change_to/)]
+
 ### [NSFL] Cannibalistic Chickens
 
 > NSFL Warning! Don't read past this if you're not comfortable with gory stuff.
@@ -139,6 +159,8 @@ Source(s): [[Reddit](https://www.reddit.com/r/TIHI/comments/kv3kqr/thanks_i_hate
 ### 14
 
 [[Google Blog](https://blog.google/products/devices-services/fitbit-acquisition/)] Google completes Fitbit acquisition
+
+[[Reddit](https://www.reddit.com/r/awfuleverything/comments/kx6k3u/disney_did_scar_this_is_way_too_dark_disney/)] The dark truth behind The Lion King
 
 ### 15
 
@@ -180,6 +202,12 @@ As always, let me know if you like this format or have any feedback for the mont
 
 ![quantum physicist and neurosurgeons vs regex experts#d#f](https://i.redd.it/vsnshba0hhc61.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/l18hk2/they_sign_a_pact_with_the_devil/)] How do they do it?")
 
+![clown detector for someone who buys YT premium#d#f](https://i.redd.it/uaqsmtos0vb61.jpg "[[Reddit](https://www.reddit.com/r/memes/comments/kz3acd/who_buys_yt_premium/)] Who does that, seriously")
+
+![telegram, signal, whatsapp vs discord#d#f](https://preview.redd.it/oyfzj4gbbob61.jpg?width=640&crop=smart&auto=webp&s=6b3aa2a8306b7861857f3c7108e6e05c01ac7565 "[[Reddit](https://www.reddit.com/r/memes/comments/kygsqi/superior_indeed/)] Discord gang, superior indeed")
+
+![emojis across devices#d#f](https://i.redd.it/x5a4vpdz0wb61.jpg "[[Reddit](https://www.reddit.com/r/TIHI/comments/kz5qv9/thanks_i_hate_macaroni_salad/)] Samsung emoji is deplorable")
+
 ![you're always preparing#d#f](https://i.redd.it/kuv15y9htwc61.png "[[Reddit](https://www.reddit.com/r/iiiiiiitttttttttttt/comments/l2r3o0/were_gonna_have_to_go_right_to_ludicrous_speed/)] What are they preparing anyways")
 
 ![anime villains and transformations#d#f](https://i.redd.it/g3z2sys2uhd61.jpg "[[Reddit](https://www.reddit.com/r/Animemes/comments/l4pk3o/its_not_mine/)] A realistic take from Attack on Titan")
@@ -193,3 +221,5 @@ As always, let me know if you like this format or have any feedback for the mont
 ![gaming keyboard in subreddit pov#d#f](https://preview.redd.it/yfmx2ofwgsd61.png?width=960&crop=smart&auto=webp&s=7cf632eb5db33927e8544f6ea8a4b71575cb48ea "[[Reddit](https://www.reddit.com/r/MechanicalKeyboards/comments/l5ul5q/ignorance_is_bliss/)] Ignorance is bliss")
 
 ![user vs interface#d#f](https://preview.redd.it/8mo5ygh8g4e61.jpg?width=640&crop=smart&auto=webp&s=d795bdcb8155bf0910821e713cf38a2cca3358ca "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/l75iun/about_right/)] Always assume the worst")
+
+![quadratic formula from school#d#f](https://preview.redd.it/4rf65hsb6fc61.jpg?width=640&crop=smart&auto=webp&s=3fa7b32a648c0e2afc407a411e5677876195e087 "[[Reddit](https://www.reddit.com/r/memes/comments/l128r9/its_that_easy/)] mitochondria is the powerhouse of the cell")
