fix: more leading slash for absolute paths

--- a/content/curated/digest/202012.md
+++ b/content/curated/digest/202012.md
@@ -39,15 +39,15 @@ Honestly, please tell me if you really did. On the other hand, this post is a fa
 
 ## Content of the month
 
-![yorimoi backdrop#f#fb](https://image.tmdb.org/t/p/original/bTIbUZVoKnlMt2IrZQv2ODPVs0N.jpg "[[TMDB](https://image.tmdb.org/t/p/original/bTIbUZVoKnlMt2IrZQv2ODPVs0N.jpg)] A Place Further Than the Universe | [See Review](reviews?q=Sora+Yori+Mo+Tooi+Basho)")
+![yorimoi backdrop#f#fb](https://image.tmdb.org/t/p/original/bTIbUZVoKnlMt2IrZQv2ODPVs0N.jpg "[[TMDB](https://image.tmdb.org/t/p/original/bTIbUZVoKnlMt2IrZQv2ODPVs0N.jpg)] A Place Further Than the Universe | [See Review](/reviews?q=Sora+Yori+Mo+Tooi+Basho)")
 
 I'm such a sucker for SOLs, and this might just be the best one, so far. A story about a group of high-school girls that leads to Antarctica. It's pretty slow-paced early on, but that's what makes slice of life so good. I can't really describe how good this is in a paragraph, but this is definitely the best one on my list, placed first when anyone asks for a slice of life anime recommendation.
 
 ### Honorable content mentions
 
-- [[DevMauss](reviews?q=Enen+no+Shouboutai)] Fire Force Season 2
-- [[DevMauss](reviews?q=Maoujou+de+Oyasumi)] Sleepy Princess in the Demon Castle
-- [[DevMauss](reviews?q=Akudama+Drive)] Akudama Drive
+- [[DevMauss](/reviews?q=Enen+no+Shouboutai)] Fire Force Season 2
+- [[DevMauss](/reviews?q=Maoujou+de+Oyasumi)] Sleepy Princess in the Demon Castle
+- [[DevMauss](/reviews?q=Akudama+Drive)] Akudama Drive
 
 I think Fire Force is just unlucky with its timing. The first season comes out around the same time as Demon Slayer and its second season is also overlooked by other anime, especially the second season of Re:Zero. But, it is definitely a good series with amazing actions, some of the best (memorable). I really hope this doesn't obstruct the third or upcoming seasons.
 
