--- a/content/posts/2019-01-07.get-windows-update-asap.md
+++ b/content/posts/2019-01-07.get-windows-update-asap.md
@@ -17,9 +17,12 @@ Although the Windows 10 upgrade process is non-destructive, it's always recommen
 
 ### There are a couple of ways to update Windows 10
 
-- [Built-in Windows Update](#winupdate)
-- [Media Creation Tool](#toolkit)
-- [Update Assistant](#assistant)
+- [Objective](#objective)
+- [Warning](#warning)
+  - [There are a couple of ways to update Windows 10](#there-are-a-couple-of-ways-to-update-windows-10)
+- [METHOD 1 &bull; Intended Windows Update](#method-1--intended-windows-update)
+- [METHOD 2 &bull; Media Creation Tool](#method-2--media-creation-tool)
+- [METHOD 3 &bull; Update Assistant](#method-3--update-assistant)
 
 ## METHOD 1 &bull; Intended Windows Update
 
