--- a/content/posts/2020-08-22.utilize-modern-devtools.md
+++ b/content/posts/2020-08-22.utilize-modern-devtools.md
@@ -19,4 +19,4 @@ Prettier is an opinionated code formatter, and having a strong and firm opinion 
 
 For those of you who just got into coding or still doesn't have your own style guide, you could try and use the default settings from Prettier. Of course, there's some things from Prettier that I don't agree with, but you can configure and change it to your liking and preferences.
 
-Linters and others like debugging tools are also useful, but I think this is the most important tool for a team (or solo) to have for consistency in your code style. I have my [settings and config](curated/config/vscode) updated once in a while, you can take a look there if you're interested.
+Linters and others like debugging tools are also useful, but I think this is the most important tool for a team (or solo) to have for consistency in your code style. I have my [settings and config](/curated/config/vscode) updated once in a while, you can take a look there if you're interested.
