--- a/content/posts/2020-10-24.one-hundredth-of-a-light-year-across-the-milky-way.md
+++ b/content/posts/2020-10-24.one-hundredth-of-a-light-year-across-the-milky-way.md
@@ -38,7 +38,7 @@ All of us already have a lot to think about in our mind. The truth is, nobody re
 
 Don't be a people pleaser, make yourself the highest priority of stuff you should care about the most. You're the only person that would be by your side till the end, not even your partner would be able to be with you all the time till the end.
 
-I'm telling all of this, as well as my [Past](posts/one-hundredth-of-a-light-year-across-the-milky-way#past) beforehand, is because I'm genuinely glad that I'm able to keep my integrity after all these years. Even though I've mentioned previously that I forget most of the things I said, I'm happy that this is ingrained in my subconscious mind.
+I'm telling all of this, as well as my [Past](/posts/one-hundredth-of-a-light-year-across-the-milky-way#past) beforehand, is because I'm genuinely glad that I'm able to keep my integrity after all these years. Even though I've mentioned previously that I forget most of the things I said, I'm happy that this is ingrained in my subconscious mind.
 
 ## Future
 
@@ -46,7 +46,7 @@ I've decided to drop most of my social media some time ago, I didn't fully purge
 
 Dropping social medias and other time-consuming apps have had a huge impact in my life. I might make a separate dedicated post for this, but I can quite confidently say that I'm happier and my mind is more relaxed than before. I got way more time for myself, family, and those friends around me I truly care about.
 
-Because of that, I'll probably drop some more of my online accounts, and probably never come back for good this time. So please don't take offence if I don't reply when you've sent me a message, I'll make an effort to update the list frequently about my socials in [my about section](about/socials) when I change, drop, or add something.
+Because of that, I'll probably drop some more of my online accounts, and probably never come back for good this time. So please don't take offence if I don't reply when you've sent me a message, I'll make an effort to update the list frequently about my socials in [my about section](/about/socials) when I change, drop, or add something.
 
 > If you can't think of anything nice to say, don't say anything at all
 
