--- a/content/curated/digest/202009.md
+++ b/content/curated/digest/202009.md
@@ -33,13 +33,13 @@ A great article by Michelle Barker explaining why she doesn't do coding challeng
 
 - [[CSS-Tricks](https://css-tricks.com/how-css-perspective-works/)] How CSS Perspective Works
 
-I was quite certain that this would be the highlight for the article of this month, but man there's really a lot of good ones that come out midway through the month. But, it doesn't mean that this is less than the others mentioned. This article by Amit Sheen really opened my mind on how perspective in CSS works, it taught me a lot to come up with a new layout I've implemented in [Reviews](reviews).
+I was quite certain that this would be the highlight for the article of this month, but man there's really a lot of good ones that come out midway through the month. But, it doesn't mean that this is less than the others mentioned. This article by Amit Sheen really opened my mind on how perspective in CSS works, it taught me a lot to come up with a new layout I've implemented in [Reviews](/reviews).
 
 It's a well-written article with good examples for me to learn and understand how it works, enough to implement it on my own. You should definitely check it out, especially if you're a front-end developer. It might not seem important right now, but you never know what ideas might pop up in your mind after you've learned about this, or you might finally figure out how to do that one layout you've been meaning to try since forever.
 
 ## Content of the month
 
-![The God of High School banner#f#hb](https://image.tmdb.org/t/p/original/bhPDfwKeRklEfeOgNzbbz0tUggq.jpg "[[TMDB](https://image.tmdb.org/t/p/original/bhPDfwKeRklEfeOgNzbbz0tUggq.jpg)] The God of High School | [See Review](reviews?q=The+God+of+High+School)")
+![The God of High School banner#f#hb](https://image.tmdb.org/t/p/original/bhPDfwKeRklEfeOgNzbbz0tUggq.jpg "[[TMDB](https://image.tmdb.org/t/p/original/bhPDfwKeRklEfeOgNzbbz0tUggq.jpg)] The God of High School | [See Review](/reviews?q=The+God+of+High+School)")
 
 The God of High School just aired their final episode for Season 1 on 28th of August and it was amazing. A manhwa adaptation with full-throttle action-packed episodes. I need to compare this to Tower of God, since they're both a webtoon turned anime, and because it was quite a letdown for me. Although the story is where it shines, there's really no action in Tower of God and when there is, it ends in with just a move. It left me unsatisfied even though I still enjoy going through the story.
 
@@ -49,9 +49,9 @@ Meanwhile, The God of High School seems to fill in all the missing pieces Tower 
 
 Other shows that aired their final episode this month too, just in time for the new shows and seasons starting this fall in October. It's not inclusive of all shows, I haven't watched some of the popular ones as well, and I won't mention shows that's still ongoing. So, here's some of my favorites from this summer
 
-- [[DevMauss](reviews?q=The+Misfit+of+Demon+King+Academy)] The Misfit of Demon King Academy
-- [[DevMauss](reviews?q=Sword+Art+Online+Alicization)] Sword Art Online: Alicization
-- [[DevMauss](reviews?q=Deca+Dence)] Deca Dence
+- [[DevMauss](/reviews?q=The+Misfit+of+Demon+King+Academy)] The Misfit of Demon King Academy
+- [[DevMauss](/reviews?q=Sword+Art+Online+Alicization)] Sword Art Online: Alicization
+- [[DevMauss](/reviews?q=Deca+Dence)] Deca Dence
 
 ## Music of the month | [Spotify Playlist](spotify:playlist:0ANZKUWgykWgF1aNH9aHq0)
 
@@ -75,7 +75,7 @@ Even after a month, I really can't stop listening to these beautiful songs by Mi
 
 ## Video of the month | [YouTube Playlist](https://www.youtube.com/playlist?list=PLtthNj7yut54HUoGX6Kw1YlCrF6vR4G7f)
 
-I was thinking about showing [how we can perform a brain surgery without a scalpel](https://youtu.be/6d_dtVTs4CM) these days, or [how complicated it is to stop climate change](https://youtu.be/wbR-5mHI6bo), or even [looking at the new neuralink](https://youtu.be/400ryImgxgE) by Elon Musk that might make those episodes from [Black Mirror](reviews?q=Black+Mirror) come true.
+I was thinking about showing [how we can perform a brain surgery without a scalpel](https://youtu.be/6d_dtVTs4CM) these days, or [how complicated it is to stop climate change](https://youtu.be/wbR-5mHI6bo), or even [looking at the new neuralink](https://youtu.be/400ryImgxgE) by Elon Musk that might make those episodes from [Black Mirror](/reviews?q=Black+Mirror) come true.
 
 ![!YouTube#hb](rHiHbsN6pyQ "A different than usual vlog from LLS")
 
