--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -29,7 +29,7 @@ I was recommended to take a look at this article earlier this month, it was quit
 
 ## Content of the month
 
-![Nichijou banner#f#hb](https://image.tmdb.org/t/p/original/3PQEbMOgQyOESo3XwtlJvZw6uoA.jpg "[[TMDB](https://image.tmdb.org/t/p/original/3PQEbMOgQyOESo3XwtlJvZw6uoA.jpg)] Nichijou | [See Review](reviews?q=Nichijou%3A+My+Ordinary+Life)")
+![Nichijou banner#f#hb](https://image.tmdb.org/t/p/original/3PQEbMOgQyOESo3XwtlJvZw6uoA.jpg "[[TMDB](https://image.tmdb.org/t/p/original/3PQEbMOgQyOESo3XwtlJvZw6uoA.jpg)] Nichijou | [See Review](/reviews?q=Nichijou%3A+My+Ordinary+Life)")
 
 This month has been quite stressful and I've just realized how comforting and encouraging a good laugh really is, and Nichijou has accompanied me and never fails to make me laugh or smile every time I watched it again. In fact, for some of their clips, it gets even funnier. You may need to think hard for some of the jokes, but it's really funny once you get it.
 
@@ -37,9 +37,9 @@ This month has been quite stressful and I've just realized how comforting and en
 
 I haven't really had much time to finish most shows this month, and I don't usually mention shows that's not finished yet. But, here's a couple worthwhile for you to follow and enjoy as it's still going on.
 
-- [[DevMauss](reviews?q=Adachi+and+Shimamura)] Adachi and Shimamura
-- [[DevMauss](reviews?q=Jujutsu+Kaisen)] Jujutsu Kaisen
-- [[DevMauss](reviews?q=TONIKAWA)] TONIKAWA: Over the Moon For You
+- [[DevMauss](/reviews?q=Adachi+and+Shimamura)] Adachi and Shimamura
+- [[DevMauss](/reviews?q=Jujutsu+Kaisen)] Jujutsu Kaisen
+- [[DevMauss](/reviews?q=TONIKAWA)] TONIKAWA: Over the Moon For You
 
 ## Music of the month | [Spotify Playlist](spotify:playlist:5MEc6r4ZMyu4W9gNk4CXtY)
 
@@ -90,7 +90,7 @@ An epic showdown and ending to the Animator vs. Animation saga, watch the final 
 
 This month marks another completed revolution for me. This time, I felt the need to make a special post to commemorate it. It's in my best interest to make this as general as possible, so that all of the readers would still understand and get my point. I do reserve the last section for everyone that's been involved in my life, one way or another.
 
-Source(s): [[Article](posts/one-hundredth-of-a-light-year-across-the-milky-way)]
+Source(s): [[Article](/posts/one-hundredth-of-a-light-year-across-the-milky-way)]
 
 ### Minecraft caves and cliffs update announced
 
